<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"

    android:layout_height="wrap_content"
    android:orientation="vertical" >


    <RelativeLayout
        android:id="@+id/imageprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ga.gasoft.smartpolice.RoundedImageView
            android:id="@+id/profile_image"
            android:src="@drawable/profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:cropToPadding="true"
            android:adjustViewBounds="true"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>
    <ScrollView
        android:layout_below="@+id/imageprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:overScrollMode="never">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/firstname"/>
            <TextView
                android:id="@+id/fname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:padding="10dp"
                android:textColor="#5d5d5d"
                android:text=""/>


            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/lastname"/>
            <TextView
                android:id="@+id/lname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:padding="10dp"
                android:textColor="#5d5d5d"
                android:text=""/>



            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/username"/>
            <TextView
                android:id="@+id/uname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:padding="10dp"
                android:textColor="#5d5d5d"
                android:text=""/>



            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/gender"/>
            <TextView
                android:id="@+id/gender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:padding="10dp"
                android:textColor="#5d5d5d"
                android:text=""/>



            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/email"/>
            <TextView
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:padding="10dp"
                android:textColor="#5d5d5d"
                android:text=""/>



            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>



            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/address"/>
            <TextView
                android:id="@+id/address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:padding="10dp"
                android:textColor="#5d5d5d"
                android:text=""/>



            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/mobileNo"/>
            <TextView
                android:id="@+id/mobile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:padding="10dp"
                android:textColor="#5d5d5d"
                android:text=""/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/policeStationName"/>
            <TextView
                android:id="@+id/policeStation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:padding="10dp"
                android:textColor="#5d5d5d"
                android:text=""/>


            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/SubDivisionName"/>
            <TextView
                android:id="@+id/subname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:padding="10dp"
                android:textColor="#5d5d5d"
                android:text=""/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/DivisionName"/>
            <TextView
                android:id="@+id/diname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:padding="10dp"
                android:textColor="#5d5d5d"
                android:text=""/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/DisName"/>
            <TextView
                android:id="@+id/disname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:padding="10dp"
                android:textColor="#5d5d5d"
                android:text=""/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>